force-app/main/default/objects/Transfer_ncia_Hospcoin__c/Transfer_ncia_Hospcoin__c.object-meta.xml
<CustomObject>
    <label>Transferência Hospcoin</label>
    <nameField>
        <displayFormat>TH{00000}</displayFormat>
        <label>Nome de Transferência Hospcoin</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transferências Hospcoin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>