force-app/main/default/objects/Transfer_ncia_Hospcoin__c/fields/Carteira_Destinataria__c.field-meta.xml
<CustomField>
    <fullName>Carteira_Destinataria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carteira Destinatária</label>
    <referenceTo>Carteira__c</referenceTo>
    <relationshipLabel>Transferências Hospcoin (Carteira Destinatária)</relationshipLabel>
    <relationshipName>Transferencias_Hospcoin_destinatario</relationshipName>
    <type>Lookup</type>
</CustomField>