force-app/main/default/objects/Transfer_ncia_Hospcoin__c/fields/Carteira_Remetente__c.field-meta.xml
<CustomField>
    <fullName>Carteira_Remetente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Carteira Remetente</label>
    <referenceTo>Carteira__c</referenceTo>
    <relationshipLabel>Transferências Hospcoin</relationshipLabel>
    <relationshipName>Transferencias_Hospcoin</relationshipName>
    <type>Lookup</type>
</CustomField>