force-app/main/default/objects/Transfer_ncia_Hospcoin__c/fields/Enviado_por__c.field-meta.xml
<CustomField>
    <fullName>Enviado_por__c</fullName>
    <formula>IF(Nome_envio_externo__c != &apos;&apos;, Nome_envio_externo__c, Remetente__r.FirstName + &apos; &apos; + Remetente__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enviado por</label>
    <type>Text</type>
</CustomField>