force-app/main/default/objects/Transfer_ncia_Hospcoin__c/fields/Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa__c</fullName>
    <label>Justificativa</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>