force-app/main/default/objects/Transfer_ncia_Hospcoin__c/fields/Nome_envio_externo__c.field-meta.xml
<CustomField>
    <fullName>Nome_envio_externo__c</fullName>
    <label>Nome (envio externo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>