force-app/main/default/objects/Transfer_ncia_Hospcoin__c/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <label>Programa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5S</fullName>
            </value>
            <value>
                <fullName>Programa Valeu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>