force-app/main/default/objects/Transfer_ncia_Hospcoin__c/fields/Quantidade_de_Hospcoins__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Hospcoins__c</fullName>
    <label>Quantidade de Hospcoins</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>