force-app/main/default/objects/Transfer_ncia_Hospcoin__c/fields/Remetente__c.field-meta.xml
<CustomField>
    <fullName>Remetente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remetente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transfer_ncias_Hospcoin</relationshipName>
    <type>Lookup</type>
</CustomField>